don't serialize null fields

--- a/application.yml
+++ b/application.yml
@@ -1,4 +1,5 @@
 spring:
+  jackson.default-property-inclusion: non_null
   datasource:
     url: jdbc:mysql://localhost:3306/CityGuide
     username: root
