--- a/application.yml
+++ b/application.yml
@@ -3,7 +3,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/CityGuide
     username: root
-    password: root-password
+    # password: root-password
   jpa.hibernate:
     naming-strategy: PhysicalNamingStrategyStandardImpl
     ddl-auto: update
